hphp/hack/test/decl/shape_type_key_types.php
<?hh

type Shape = shape(
  0 => int,
  's' => string,
  C::class => classname<C>,
  C::KEY => string,
);
